--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<title>It's  Assignment</title>
 	<style>
 	/********** Base styles **********/
+
+	     body {
+	     	background-color: blue;
+	     }
 		*{
 			box-sizing: border-box;
 		}
